[metadata]
name = dist-restoration
version = 0.0.1
license = MIT
description = 3-Phase unbalanced power distribution restoration due to single or multiple faults
long_description = file: README.md
author = Abodh Poudyal
author_email = abodh.poudyal@wsu.edu
classifiers=
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research

[options]
python_requires = >=3.6
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where=src