[metadata]
name = ldrestoration
version = 0.1.0
license = MIT
description = Linearized 3-Phase unbalanced power distribution restoration using mixed-integer programming
long_description = file: README.md
author = Abodh Poudyal
author_email = 'abodh.poudyal@wsu.edu, abodh.poudyal@gmail.com '
classifiers=
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research

[options]
python_requires = >=3.10
packages = find:
include_package_data = True
install_requires=
    numpy<2
    networkx>=3.2,
    pandas>=1.5,
    pyomo>=6.0,
    folium>=0.15,
    matplotlib>=3.6,
    networkx>=3.2,
    plotly>=5.18,
    opendssdirect.py==0.8.4
zip_safe = False